--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
+# Base service URL used for generating invite links
+service.base.url=http://localhost:8080/vobolo/
+docs.url=http://localhost:8080/vobolo/iv/docs/
+fb.connect.url=http://localhost:8080/vobolo/iv/fbc/
+tw.connect.url=http://localhost:8080/vobolo/iv/twc/
+
+mqtt.host=localhost
+mqtt.port=8883
+mqtt.user=guest
+mqtt.password=guest
+
+pns.app.id=318755574741
+
+
